--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
 <div id="content">
 <p>The two amendments were a renewed effort by Toomey and company to pass their amendment that failed two-and-a-half years prior. The second amendment was introduced by Sen. Diane Feinstein and suggested restrictions on people to purchase guns who are on a federal terrorism watch list. Both Amendments failed. 
 <p>Those who voted on both of Toomey's appearances in the Senate largely voted the same as they had in 2013. The amendments both needed 60 votes to progress, but lost on a close margin.</p>
-<p>Sens. Harry Reid and Chuck Schumer accused legislators of Kowtowing to NRA interests. Sen. John Cornyn, as a whip, was one of the strongest ovoices of the opposition to the bills.</p>
+<p>Sens. Harry Reid and Chuck Schumer accused legislators of Kowtowing to NRA interests. Sen. John Cornyn, as a whip, was one of the strongest voices of the opposition to the bills.</p>
 <iframe src="Cornyn_NRA.html" frameBorder="0"></iframe>
 <p>Cornyn began receiving money from gun rights PACs after he voted against Toomey's amendment in 2013. Before that, he had minimally benefited from NRA and Safari Club International's investment in gun-control legislation outcomes.</p>
 <p>This year, there have been more mass shootings than there are days in the year. While Congress refuses to move on background checks and reform, the public groes increasingly concerned for its safety. On Saturday night, the president gave an address to the nation once again calling for change.</p>
