--- a/main.html
+++ b/main.html
@@ -14,18 +14,7 @@
 <h2>The search for a bill on the Hill</h2>
 <div id="content">
 <p>The statistics behind gun violence in America and the frequency with which mass shootings have occurred in the past decade have led many members of the public to call for stricter gun regulations. Yet, no major gun legislation has been pushed through Congress in response to what President Barack Obama has described as a national problem. Obama has promoted gun control legislation in 15 of his speeches. He and liberal members of Congress have repeatedly asked for lawmakers to support measures that would require background checks before the purchase of guns and prevent the mentally ill from obtaining them.</p>
-<p>Many of Obama's calls to action have followed multiple-casualty mass shootings. <em>Mother Jones</em> has compiled a list of these shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. Of the top 10 most deadly mass shootings, 6 occured after 2007. In fact, the United States has become a world leader in mass shootings, University of Alabama criminology professor Adam Lankford found. His research showed that the U.S. accounts for one-third of all mass shootings committed in the world with data from 1966 to 2012. The study also found that widespread, often uncensored gun ownership might be a large reason for the climate of gun violence in this country.</p>
-<div class="timeline">
-  <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe></div>
-<p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. Gun-related deaths could outnumber deaths by car accidents in 2015, according to multiple reports.</p>
-<iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
-<p>The number of gun-related deaths has increased over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33,636.</p>
-<iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
-</div>
-<div class="banner2"></div>
-<div id="content">
-<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
-</div>
+
 <div id="content">
 <div class="flex">
 <iframe src="Feinstein.html" frameBorder="0"></iframe>
@@ -33,9 +22,26 @@
 <div class="flex">
 <iframe src="Manchin-ToomeyPart2.html" frameBorder="0"></iframe>
 </div>
+
+<p>Many of Obama's calls to action have followed multiple-casualty mass shootings. <em>Mother Jones</em> has compiled a list of these shootings, many of which caused more than 10 deaths. These shootings have increased in frequency in recent years. Of the top 10 most deadly mass shootings, 6 occured after 2007. In fact, the United States has become a world leader in mass shootings, University of Alabama criminology professor Adam Lankford found. His research showed that the U.S. accounts for one-third of all mass shootings committed in the world with data from 1966 to 2012. The study also found that widespread, often uncensored gun ownership might be a large reason for the climate of gun violence in this country.</p>
+
+<div class="timeline">
+  <iframe src='http://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1gI0ZXhVbzCHEdBC9moHCVYgiD3sX5fKNEtmVHGdTRwk&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' frameborder='0'></iframe>
+</div>
+<p>But beyond mass shootings, the day-to-day individual gun violence in America is also increasing on a national level. Gun-related deaths have steadily increased since 2009. Between 2000 and 2013, gun-related deaths have risen by 4,973 deaths. Gun-related deaths could outnumber deaths by car accidents in 2015, according to multiple reports.</p>
+<iframe src="Gun_related_deaths.html" frameBorder="0"></iframe>
+<p>The number of gun-related deaths has increased over the past 15 years. From 2000 to 2013, the annual death count has increased from 28,663 to 33,636.</p>
+
+
+<iframe src="bipartisanSupport.html" frameBorder="0"></iframe>
+<p>After the Sandy Hook Elementary School shooting, Obama promised he would make his best effort to jumpstart reform in Congress. One of his promises were universal background checks for potential gun owners.</p>
 <p>There is strong support from both Democrats and Republicans for background checks for gun purchases, preventing mentally ill from purchasing guns, federal database for gun sales, and ban on assault-style weapons (with the exception of only 48% Republican support for ban on assault-style weapons).</p>
+</div>
+
+<div class="banner2"></div>
+
 <blockquote>"Those who choose to do the NRA's bidding will be held accountable by our constituents. ... Something has to be done. We must take a stand. The American people are desperately looking for help, some help, any help." <br><em>- Senate Minority Leader Harry Reid </em></blockquote>
-<iframe src="NRASpending.html" frameBorder="0"></iframe>
+
 <iframe src="MTvote.html" frameBorder="0"></iframe>
 <p>54 Senators (48 Democrats, 4 Republicans, and 2 Independets) were in favor of Manchin-Toomey Amendment, and 46 Senators (5 Democrats, 41 Republicans) were against the amendment.</p>
 <p>Manchin-Toomey Amendment, 6 votes too short, did not pass the vote in the Senate.</p>
@@ -45,7 +51,12 @@
 <p>The NRA withdrew support and ran a television campaign ad against the senator, as he ran for re-election in the next election cycle.</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/J_q5zqrVktg" frameborder="0" allowfullscreen></iframe>
 <p>However, Manchin hasn't given up his efforts to pass gun reform. He continued to speak out in favor of background checks after the bill failed. The first gun control amendments to hit the Senate floor came after the Bernardino mass shooting at the beginning of December.</p>
+
+<iframe src="NRASpending.html" frameBorder="0"></iframe>
+
 </div>
+
+
 <div id="content">
 <p>The two amendments were a renewed effort by Toomey and company to pass their amendment that failed two-and-a-half years prior. The second amendment was introduced by Sen. Diane Feinstein and suggested restrictions on people to purchase guns who are on a federal terrorism watch list. Both Amendments failed. 
 <p>Those who voted on both of Toomey's appearances in the Senate largely voted the same as they had in 2013. The amendments both needed 60 votes to progress, but lost on a close margin.</p>
